<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradiant"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/profile_pic"
        android:src="@drawable/avatar"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textSize="25sp"
        android:layout_marginTop="8dp"
        android:textColor="@color/unify3"
        android:textStyle="bold|italic"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/achievments_label"
        android:textColor="@color/unify3"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:textSize="16sp"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/achieve1"
            android:src="@drawable/band"
            android:layout_marginEnd="5dp"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/achieve2"
            android:src="@drawable/achievement"
            android:layout_marginEnd="5dp"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/achieve3"
            android:src="@drawable/trophy"
            android:layout_marginEnd="5dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <EditText
        android:id="@+id/editText"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/unify3"
        android:hint="@string/hobbies_editText_hint"
        android:textColorHint="#59FFFFFF"
        android:inputType="text"
        android:autofillHints="@null"
        android:textAlignment="center"
        android:textStyle="bold|italic"/>
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_text"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:backgroundTint="#172037"
        android:textColor="@color/unify3"/>
    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/unify3"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/unify2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bio_label"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:textColor="@color/unify3"
        android:textStyle="bold"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bio"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:gravity="center"
            android:textColor="@color/unify3"/>
    </ScrollView>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/unify2" />

</androidx.appcompat.widget.LinearLayoutCompat>